# Image-sound-processing

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Doxyfile  Image_sound_processing.cbp  Makefile  README.md  cmake_install.cmake  doxy.in  fftTest  filterTest  main  main.cpp  readerTest
doc/html/: _contour_extractor_8h_source.html  _f_f_t_8h_source.html  _histogram_8h_source.html  _reader_8h_source.html  _run_8h_source.html  _writer_8h_source.html  annotated.html  class_contour_extractor-members.html  class_contour_extractor.html  class_histogram-members.html  class_histogram.html  class_reader-members.html  class_reader.html  class_run-members.html  class_run.html  class_writer-members.html  class_writer.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  index.html  menudata.js
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_6.js  all_8.js  all_9.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_a.js  searchdata.js
doc/latex/: annotated.tex  class_contour_extractor.tex  class_histogram.tex  class_reader.tex  class_run.tex  class_writer.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  refman.tex
histograms/: WriteHistogram.cpp  blue_histogram.txt  green_mandrill.txt  lenna.txt  read_histograms.py  red_histogram.txt
libraries/: CImg.h
src/: ContourExtractor.cpp  ContourExtractor.h  FFT.cpp  FFT.h  Filter.cpp  Filter.h  Histogram.cpp  Histogram.h  HistogramWriter.cpp  HistogramWriter.h  Reader.cpp  Reader.h  Run.cpp  Run.h  WriteHistogram.cpp  Writer.cpp  Writer.h  main.cpp  main_histo.cpp
test/: contourExtractorTest.cpp  fftTest.cpp  filterTest.cpp  histogramTest.cpp  readerTest.cpp  writerTest.cpp  writertest.cpp
